--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
   <body>
 
- Tuesday Morning
+<a href="https://kantonalumzuege.ch/"> </a>
+<a href="https://playsonus.com/"> </a>
 
 </body>
 </html>
